feat: adjust deployment notebook

--- a/scripts/deploy_scrvusd.ipynb
+++ b/scripts/deploy_scrvusd.ipynb
@@ -174,7 +174,7 @@
    "id": "12",
    "metadata": {},
    "source": [
-    "### 3. RewardsHandler"
+    "### 3. Stablecoin Lens"
    ]
   },
   {
@@ -184,15 +184,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# III. Finally deploy the RewardsHandler\n",
+    "# III. Now deploy Stablecoin Lens\n",
+    "StablecoinLens_deployer = boa.load_partial(\"../contracts/StablecoinLens.vy\")\n",
+    "\n",
+    "stablecoin_lens = StablecoinLens_deployer(ab.crvusd_controller_factory)\n",
+    "\n",
+    "print(f\"Stablecoin lens deployed at {stablecoin_lens.address}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14",
+   "metadata": {},
+   "source": [
+    "### 4. RewardsHandler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IV. Finally deploy the RewardsHandler\n",
     "RewardsHandler_deployer = boa.load_partial(\"../contracts/RewardsHandler.vy\")\n",
     "\n",
     "rewards_handler = RewardsHandler_deployer(\n",
     "    ab.crvusd,  # stablecoin\n",
     "    vault_address,  # vault\n",
+    "    stablecoin_lens,  # lens\n",
     "    500,  # minimum weight (5%)\n",
     "    10_000,  # scaling factor (over MAX_BPS)\n",
-    "    ab.crvusd_controller_factory,  # controller factory\n",
     "    ab.dao_agent,  # WE CERTAIN ABOUT THIS CONTRACT? [TODO]\n",
     ")\n",
     "\n",
@@ -201,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "source": [
     "# II. Post-deployment setup"
@@ -210,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "18",
    "metadata": {},
    "source": [
     "## 3. Vote in the DAO"
@@ -248,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": []
