feat: add vote script

--- a/scripts/deploy_scrvusd.ipynb
+++ b/scripts/deploy_scrvusd.ipynb
@@ -275,9 +275,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ACTIONS = [(ab.controller_factory, \"set_fee_receiver\", fs)]\n",
-    "# DESCRIPTION = \"Set the fee receiver to the fee splitter, to lay the foundation for autobribe, st-crvUSD and rebalancing donations. This vote **is not** about changing the fee distribution (100% of revenues will still go to veCRV holders).\"\n",
-    "# curve_dao.create_vote(ab.dao, ACTIONS, DESCRIPTION, ETHERSCAN_API_KEY, PINATA_API_KEY)"
+    "import curve_dao\n",
+    "\n",
+    "change_fee_splitter_receivers = (\n",
+    "    ab.fee_splitter,\n",
+    "    \"set_receivers\",\n",
+    "    (\n",
+    "        [\n",
+    "            (vault_address, 1_000),\n",
+    "            (ab.crvusd_fee_collector, 9_000),\n",
+    "        ]\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "accept_vault_role_manager = (vault, \"accept_role_manager\", ())\n",
+    "\n",
+    "ACTIONS = [change_fee_splitter_receivers, accept_vault_role_manager]\n",
+    "DESCRIPTION = \"This proposal starts streaming a part of crvUSD fees to scrvUSD. To enact this the fee splitter will now send (at least) 90% of the revenues to the fee collector (previously 100%), and (at most) 10%, which might be reached only if the number of depositors grows, to sustain the yield.\"\n",
+    "curve_dao.create_vote(\n",
+    "    curve_dao.get_dao_parameters(\"ownership\"),\n",
+    "    ACTIONS,\n",
+    "    DESCRIPTION,\n",
+    "    ETHERSCAN_API_KEY,\n",
+    "    PINATA_API_KEY,\n",
+    ")  # ACTIONS = [(ab.controller_factory, \"set_fee_receiver\", fs)]"
    ]
   },
   {
